2003-02-01  Richard Henderson  <rth@redhat.com>

	* libgcc2.c: Include auto-host.h.
	(ATTRIBUTE_HIDDEN): New.
	(__clz_tab): Don't declare here for clz and ctz.
	(__clzsi2, __clzdi2): Use count_leading_zeros.
	(__ctzsi2, __ctzdi2): Use count_trailing_zeros.
	(__popcount_tab): Mark ATTRIBUTE_HIDDEN.
	(__paritysi2, __paritydi2): Use shifts instead of __popcount_tab.
	* longlong.h (__clz_tab): Mark ATTRIBUTE_HIDDEN.

2003-02-01  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.md (addsi_1_zext splitter): Add TARGET_64BIT
	to the conditional.
	(ashlsi3_1_zext splitter): Likewise.

2003-02-01  Richard Henderson  <rth@redhat.com>

	* optabs.c (expand_unop): Use word_mode for outmode of bit scaners.
	* libgcc2.c (__ffsdi2, __clzsi2, __clzdi2, __ctzsi2, __ctzdi2,
	__popcountsi2, __popcountdi2, __paritysi2 __paritydi2): Change
	return type to Wtype.

	* libgcc-std.ver (GCC_3.4): Fix inheritance.

	* config/i386/i386.md (ffssi2): Use nonimmediate_operand for
	expander input constraint.

2003-02-01  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>

        * optabs.h (optab_index): Add OTI_clz, OTI_ctz, OTI_popcount and
        OTI_parity.
        (clz_optab, ctz_optab, popcount_optab, parity_optab): New.
        * optabs.c (widen_clz, expand_parity): New.
        (expand_unop): Handle clz and parity.  Hardcode SImode as outmode
        for libcalls to clz, ctz, popcount, and parity.
        (init_optabs): Init clz_optab, ctz_optab, popcount_optab and
        parity_optab, and set up libfunc handlers.
        * libgcc2.c (__clzsi2, __clzdi2, __ctzsi2, __ctzdi2,
        __popcountsi2, __popcountdi2, __paritysi2 __paritydi2,
        __popcount_tab): New.
        * libgcc2.h: Declare them.
        * libgcc-std.ver (GCC_3.4): Add new functions from libgcc2.c.
        * genopinit.c (optabs): Add clz_optab, ctz_optab, popcount_optab
        and parity_optab.
        * builtin-types.def (BT_FN_INT_LONG, BT_FN_INT_LONGLONG): New.