@@ -1,3 +1,8 @@
+2003-02-01  Daniel Jacobowitz  <drow@mvista.com>
+
+	* dwarf2out.c (gen_type_die): Check for typedefs before calling
+	for TYPE_MAIN_VARIANT.
+
 2003-02-01  Richard Henderson  <rth@redhat.com>
 
 	* libgcc2.c: Include auto-host.h.
